# ironvein

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  index.html  ironvein.wasm  serve-web.sh
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml
crates/client/: Cargo.toml
crates/client/src/: audio.rs  gfx.rs  main.rs  menu.rs  music.rs  synth.rs  synth_ir.rs  ui.rs
crates/net/: Cargo.toml
crates/net/src/: browser.rs  crypto.rs  lib.rs  nostr.rs  protocol.rs  session.rs  signaling.rs  transport.rs  transport_tcp.rs  transport_webrtc.rs
crates/net/tests/: auth.rs  loopback.rs
crates/seed/: Cargo.toml
crates/seed/src/: main.rs
crates/sim/: Cargo.toml
crates/sim/src/: bot.rs  command.rs  entity.rs  lib.rs  map.rs  mapgen.rs  path.rs  rng.rs  ser.rs  stats.rs  world.rs
crates/sim/tests/: determinism.rs
js/: ironvein_audio.js  ironvein_net.js  mq_js_bundle.js
